updated s3fs-fuse and bucket Mount

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /leofs
+/aws-sdk-java/lib/aws-java-sdk-1.6.5-javadoc.jar
+/aws-sdk-java/lib/aws-java-sdk-1.6.5-sources.jar
+/aws-sdk-java/lib/aws-java-sdk-1.6.5.jar
+/aws-sdk-java/lib/aws-java-sdk-flow-build-tools-1.6.5.jar
+/bootstrap.sh
